name:                bindings-svm
version:             3.22
synopsis:            Low level bindings to libsvm.
description:
  Low level bindings to libsvm <http://www.csie.ntu.edu.tw/~cjlin/libsvm/>.
  .
license:             BSD3
license-file:        LICENSE
author:              Paulo Tanimoto <ptanimoto@gmail.com>
maintainer:          Paulo Tanimoto <ptanimoto@gmail.com>
homepage:            http://github.com/tanimoto/bindings-svm
bug-reports:         http://github.com/tanimoto/bindings-svm/issues
category:            Math
                   , FFI

build-type:          Simple
cabal-version:       >= 1.24

library
  hs-source-dirs:   src
  exposed-modules:  Bindings.SVM
  build-depends:    base         >= 3   && < 5
                  , bindings-DSL >= 1.0 && < 1.1
  include-dirs:     libsvm
  install-includes: libsvm/svm.h
  c-sources:        libsvm/svm.cpp
  includes:         libsvm/svm.h
  extra-libraries:  stdc++
